# news-playlist

./: .env.example  .gitignore  .last_build_id  .mcp.json  CLAUDE.md  DESIGN.md  Makefile  README.md  Y-Tuong.txt  codemagic.yaml  flutter_bootstrap.js  flutter_launcher_icons.yaml  flutter_native_splash.yaml  index.html  main.dart.js  pubspec.yaml  shorebird.yaml  version.json
.github/workflows/: ci.yml
.planning/: DESIGN-REVIEW.md  ENG-REVIEW.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json  spike-results.md
android/: key.properties.example
android/app/: build.gradle.kts  proguard-rules.pro
assets/: NOTICES  export-icon.html
assets/icon/: README.md
assets/splash/: README.md
backend/: Dockerfile  pyproject.toml
backend/app/: config.py  main.py  models.py
backend/app/crawlers/: base.py  dantri.py  soha.py
backend/app/routers/: articles.py  categories.py
backend/app/services/: crawl_service.py
integration_test/: app_test.dart
integration_test/flows/: browse_and_play_test.dart  play_all_test.dart  player_controls_test.dart  resume_playback_test.dart  settings_test.dart
integration_test/helpers/: fake_audio_service.dart  pump_helpers.dart  test_app.dart  test_fixtures.dart
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: app_shell.dart  main.dart
lib/models/: article.dart  category_config.dart
lib/providers/: audio_player_provider.dart  (+1 more)
linux/: CMakeLists.txt
supabase/: config.json
test/: widget_test.dart
tool/: generate_icon.dart
web/: index.html  manifest.json
windows/: CMakeLists.txt
(+70 files in other folders)
