[project]
name = "news-playlist-backend"
version = "0.1.0"
description = "Backend API for News Playlist - crawls Vietnamese news audio"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "httpx>=0.27.0",
    "beautifulsoup4>=4.12.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.29.0",
    "apscheduler>=3.10.0",
    "pydantic-settings>=2.0.0",
    "alembic>=1.13.0",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio", "httpx"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
